# thing

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/thing/: __init__.py  argument.py  array_types.py  client.py  interactive.py  server.py  servicer.py  store.py  thing.proto  thing.py  thing_pb2.py  thing_pb2.pyi  thing_pb2_grpc.py  type.py  utils.py
tests/: test_args.py  test_exits.py  test_pytree.py  test_transmissions.py  test_utils.py  test_vars.py
